--- a/firebase.json
+++ b/firebase.json
@@ -9,5 +9,11 @@
     "frameworksBackend": {
       "region": "us-central1"
     }
+  },
+  "storage": {
+    "rules": "storage.rules"
+  },
+  "database": {
+    "rules": "database.rules.json"
   }
-} 
+}
