--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,12 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm run build
-      - run: npm install -g firebase-tools
-      - run: firebase deploy --only hosting,functions --force --token "${{ secrets.FIREBASE_SERVICE_ACCOUNT_EVKE_F6FED }}"
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_EVKE_F6FED }}'
+          channelId: live
+          projectId: evke-f6fed
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
+          FIREBASE_CLI_PREVIEWS: hostingchannels
