--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "date-fns": "latest",
     "embla-carousel-react": "latest",
     "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
