--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,20 @@
       "region": "us-central1"
     }
   },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "functions",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "runtime": "nodejs20"
+    }
+  ],
   "storage": {
     "rules": "storage.rules"
   },
